# arancini

./: .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  Makefile  README.md  RELEASING.md
.forgejo/workflows/: cicd.yml  publish-crates.yml
.github/: FUNDING.yml
.github/workflows/: cicd.yml  publish-crates.yml
arancini/: Cargo.toml  build.rs
arancini-lib/: Cargo.toml
arancini-lib/src/: lib.rs  processor.rs  state.rs
arancini-lib/src/state_store/: memory.rs
arancini-lib/tests/: processor.rs
arancini/src/: arancini.rs  bridge.rs  config.rs  main.rs  nats.rs  producer.rs  update_capnp.rs
integration/: compose.yml
integration/bench/: apply_2_6_linux_tuning.sh  arancini-linux-sysctl.conf  old-kafka-vs-new-nats-report.md  risotto-vs-arancini-bird-saturating-report.md  risotto-vs-arancini-runtime-report.md  run_2_4_2_5.sh  run_2_6_linux_tuning_validation.sh  run_2_8_burst_tuning_validation.sh  run_bird_saturating_runtime_benchmark.sh  run_old_kafka_vs_new_nats.sh  run_old_vs_new_comparison.sh  run_risotto_vs_arancini_runtime_benchmark.sh  run_saturating_throughput.sh
integration/bench/jetstream_admin/: Cargo.toml
integration/bench/jetstream_admin/src/: main.rs
integration/config/clickhouse/docker-entrypoint-initdb.d/: init.sql
integration/config/gobgp/: bench-gobgp10.toml  bench-gobgp20.toml  bench-gobgp50.toml
openspec/: project.md
openspec/changes/refactor-arancini-shared-nothing/: design.md  migration-notes.md  proposal.md  tasks.md
openspec/changes/refactor-arancini-shared-nothing/specs/bmp-ingest-runtime/: spec.md
openspec/changes/refactor-arancini-shared-nothing/specs/deployment-performance-tuning/: spec.md
openspec/changes/refactor-arancini-shared-nothing/specs/hot-path-hardening/: spec.md
openspec/changes/refactor-arancini-shared-nothing/specs/nats-jetstream-bridge/: spec.md
openspec/changes/refactor-arancini-shared-nothing/specs/sharded-curation-store/: spec.md
openspec/changes/refactor-arancini-shared-nothing/validation/: 2.4-2.5-benchmark-report.md  2.6-linux-tuning-report.md  2.8-burst-socket-tuning-report.md
risotto/: Cargo.toml
risotto-lib/: Cargo.toml
risotto-lib/src/: lib.rs  processor.rs  sender.rs  state.rs  update.rs
risotto-lib/src/state_store/: memory.rs
risotto-lib/tests/: processor.rs
risotto/src/: arancini.rs  bmp.rs  bridge.rs  config.rs  main.rs  nats.rs  producer.rs  serializer.rs  state.rs
