[workspace]
resolver = "2"
members = ["arancini", "arancini-lib"]

[workspace.package]
version = "0.7.2"
license = "MIT"
readme = "README.md"
description = "High-performance BMP collector"
repository = "https://github.com/carverauto/arancini"
homepage = "https://github.com/carverauto"
keywords = ["BGP", "BMP", "collector"]
exclude = [
     ".github/*",
     "integration/*",
     "renovate.json",
 ]
