[workspace]
resolver = "2"
members = ["arancini", "arancini-lib"]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
version = "0.7.4"
license = "MIT"
readme = "README.md"
description = "High-performance BMP collector"
repository = "https://github.com/carverauto/arancini"
homepage = "https://github.com/carverauto"
keywords = ["BGP", "BMP", "collector"]
exclude = [
     ".github/*",
     "integration/*",
     "renovate.json",
 ]
