[package]
name = "arancini-lib"
edition = "2024"

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bgpkit-parser = { version = "0.15", default-features = false, features = ["parser", "serde"] }
bytes = "1.9.0"
chrono = "0.4"
metrics = "0.24"
rand = "0.9"
serde = { version = "1", default-features = false,features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
