[package]
name = "arancini"
edition.workspace = true
rust-version.workspace = true

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1"
async-nats = "0.49"
postcard = { version = "1.1", features = ["alloc"] }
bytes = "1"
bgpkit-parser = { version = "0.15", default-features = false, features = ["parser", "serde"] }
capnp = "0.25.0"
chrono = "0.4.40"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
core_affinity = "0.8"
crossfire = "3.1"
futures = "0.3.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.0"
monoio = { version = "0.2.4", features = ["macros"] }
num_cpus = "1.17"
rdkafka = "0.39"
arancini-lib = { path = "../arancini-lib", version = "0.7.5" }
serde = { version = "1", default-features = false,features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
tracing = "0.1"
tracing-subscriber = {version= "0.3", default-features = false, features = ["fmt", "env-filter"]}
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }

[build-dependencies]
capnpc = "0.25.0"
